--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .header{
-	display:flex;
-	justify-content:space-evenly;
+	display: flex;
+	justify-content: space-between;
 	flex-wrap: wrap;
 }
 .one{
